rename pasta Pirnt pra mostra

--- a/lib/mostra/CMakeLists.txt
+++ b/lib/mostra/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(Print Print.h Print.cpp)
+add_library(Print print.h print.cpp)
 
 target_include_directories(Print PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
