--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.0.0)
 project(greeter VERSION 0.1.0)
 
 
-add_subdirectory(lib/Print)
+add_subdirectory(lib/mostra)
 add_subdirectory(bin)
