edit inlcude head

--- a/lib/mostra/CMakeLists.txt
+++ b/lib/mostra/CMakeLists.txt
@@ -1,3 +1,6 @@
-add_library(Print print.h print.cpp)
+add_library(print
+print.h 
+print.cpp
+)
 
-target_include_directories(Print PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(print PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
