:white_check_mark:  teste de chamada de classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.0.0)
 project(greeter VERSION 0.1.0)
 
 
+add_subdirectory(lib/spi)
 add_subdirectory(lib/mostra)
 add_subdirectory(bin)
